# github-repo-lint

./: .gitignore  .prettierrc.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  config.example.json  config.schema.json  expected_branch_protection_rules.json  expected_repository_settings.json
.github/workflows/: build.yml  check-formatting.yml  release.yml
docs/: branch-protection-example.json
examples/: README.md  hacktoberfest.json
files/: get_repositories_from_user.graphql
src/: app.rs  branch_protection_rules.rs  config.rs  context.rs  get_repositories_from_user.rs  main.rs  options.rs  repository_settings.rs  topic_operation.rs
src/api/: branch_protection.rs  get_repositories.rs  get_repositories_from_organization.rs  get_repositories_from_user.rs  get_repository.rs  get_repository_info.rs  get_repository_topics.rs  graphql.rs  mod.rs  pagination.rs  rest.rs  update_repository_branch_protection_rules.rs  update_repository_settings.rs  update_repository_topics.rs
src/models/: branch_protection.rs  branch_protection_update.rs  mod.rs  repository.rs  repository_owner.rs
src/models/de/: mod.rs  optionally_enabled.rs
