[package]
name = "github-repo-lint"
description = "Lint and fix batch GitHub repositories' settings and branch protection rules according to your preferences."
version = "0.1.1"
edition = "2021"
include = ["files/*.graphql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
const_format = "0.2"
clap = { version = "4.0", features = ["cargo"] }
console = "0.15"
