[package]
name = "github-repo-lint"
description = "Lint and fix batch GitHub repositories' settings and branch protection rules according to your preferences."
version = "0.1.1"
edition = "2021"
include = ["files/*.graphql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1.0"
const_format = "0.2"
clap = { version = "4.5", features = ["cargo"] }
console = "0.15"
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time", "json"] }
chrono = { version = "0.4.40", features = ["serde"] }
derive_builder = "0.20.2"

[dev-dependencies]
rstest = { version = "0.24.0", default-features = false }
